2004-09-13  Richard Henderson  <rth@redhat.com>

        PR inline-asm/6806
        * cselib.c (cselib_invalidate_rtx): Export.  Remove unused args.
        (cselib_invalidate_rtx_note_stores): New.
        (cselib_record_sets, cselib_process_insn): Update to match.
        * cselib.h (cselib_invalidate_rtx): Declare.
        * reload1.c (reload_cse_simplify): Invalidate asm clobbers.

2004-08-29  Jonathan Wakely  <redi@gcc.gnu.org>

	* doc/trouble.texi (C++ misunderstandings): Fix example code.

2004-08-26  Richard Henderson  <rth@redhat.com>

	PR target/15718
	* config/alpha/alpha.h (HARD_REGNO_MODE_OK): Allow complex float
	modes.

2004-08-26  Matthias Klose  <doko@debian.org>

	* doc/invoke.texi: Remove duplicate -fbranch-probabilities entry.

2004-08-14  Roger Sayle  <roger@eyesopen.com>

	* fixinc/tests/base/obstack.h: Backport from mainline.

2004-08-14  Roger Sayle  <roger@eyesopen.com>
	    David Billinghurst  <David.Billinghurst@riotinto.com>

	PR libgfortran/15930
	* fixinc/inclhack.def (irix___generic1, irix___generic2): New.
	* fixinc/fixincl.x: Regenerate.
	* fixinc/tests/base/internal/math_core.h: New file

2004-08-08  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/16790
	* fold-const.c (expand_muldiv_1) <NOP_EXPR>: Disallow local
	truncations, not just global truncations.

2004-08-02  Ulrich Weigand  <uweigand@de.ibm.com>

	Backport from mainline:
	2003-07-11  Jakub Jelinek  <jakub@redhat.com>
	* optabs.c (prepare_cmp_insn): Try cmpmemM first if it exists,
	then fall back to cmpstrM.
	* builtins.c (expand_builtin_memcmp): Likewise.
	* config/s390/s390-protos.h (s390_expand_cmpstr): Rename to...
	(s390_expand_cmpmem): ... this.
	* config/s390/s390.md (cmpmemdi, cmpmemsi, cmpmem_short_64,
	cmpmem_short_31, cmpmem_long_64, cmpmem_long_31): Renamed
	from cmpstr* patterns.  Rename call to s390_expand_cmpstr
	to s390_expand_cmpmem.
	* config/s390/s390.c (s390_expand_cmpstr): Rename to...
	(s390_expand_cmpstr): ... this.  Rename cmpstr* instructions